--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,5 +2,6 @@ cmake_minimum_required(VERSION 3.20)
 set(CMAKE_CXX_STANDARD 20)
 project(roguelike)
 add_executable(roguelike main.cpp)
-add_library(entities STATIC entities.cpp)
-target_link_libraries(roguelike entities)
+add_library(entities STATIC roguelike/entities.cpp)
+add_library(map STATIC roguelike/map.cpp)
+target_link_libraries(roguelike map entities)
