working fighting, print and control

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,4 +4,6 @@ project(roguelike)
 add_executable(roguelike main.cpp)
 add_library(entities STATIC roguelike/entities.cpp)
 add_library(map STATIC roguelike/map.cpp)
-target_link_libraries(roguelike map entities)
+add_library(print STATIC roguelike/print.cpp)
+add_library(control STATIC roguelike/control.cpp)
+target_link_libraries(roguelike map entities print control)
